# SerenEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Engine/: CMakeLists.txt
Engine/SerenEngine/: Base.h  SerenEngine.h  pch.cpp  pch.h
Engine/SerenEngine/Core/: Application.cpp  Application.h  EntryPoint.h  GlobalMemory.cpp  GlobalMemory.h
Engine/SerenEngine/Core/Event/: EventAction.h  EventContext.h  EventDispatcher.cpp  EventDispatcher.h
Engine/SerenEngine/Core/Input/: GLFWInput.cpp  InputState.h  Keycode.h
Engine/SerenEngine/Core/Layer/: Layer.h  LayerStack.cpp  LayerStack.h
Engine/SerenEngine/Core/Logger/: Logger.cpp  Logger.h
Engine/SerenEngine/Core/Math/: Quaternion.cpp  Quaternion.h  Ultils.cpp  Ultils.h  Vector.cpp  Vector.h
Engine/SerenEngine/Core/Memory/: LinearAllocator.cpp  MemoryAllocator.cpp  MemoryAllocator.h  MemoryChunkManager.h  MemoryManager.cpp  MemoryManager.h  PoolAllocator.cpp
Engine/SerenEngine/Core/System/: System.cpp  System.h
Engine/SerenEngine/Core/Time/: Time.h
Engine/SerenEngine/Core/Type/: Actor.cpp  Actor.h  Cast.h  Component.h  Object.cpp  Object.h  RTTI.cpp  RTTI.h
Engine/SerenEngine/ECS/: ComponentManager.h  Coordinator.cpp  Coordinator.h  ECSType.h  EntityManager.cpp  EntityManager.h  IComponent.h  ISystem.h  SystemManager.cpp  SystemManager.h
Engine/SerenEngine/ECS/Components/: Component.h
Engine/SerenEngine/ECS/Components/Graphics/: SpriteComponent.cpp
Engine/SerenEngine/ECS/System/: System.cpp  System.h
Engine/SerenEngine/ImGUI/: ImGuiLayer.cpp  ImGuiLayer.h
Engine/SerenEngine/Memory/: MemoryAllocator.h  MemoryChunkManager.h  MemoryManager.cpp  MemoryManager.h  MemoryMonitor.cpp  MemoryMonitor.h  StackAllocator.cpp
Engine/SerenEngine/Platform/: GLFWPlatformWindow.cpp  Window.h  WindowPlatform.h
Engine/SerenEngine/Renderer/: OpenGLRenderCommand.cpp  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  RenderCommandCallback.cpp  RenderCommandCallback.h  RenderCommandQueue.cpp  RenderCommandQueue.h  Renderer.cpp  Renderer.h  RendererAPI.h
Engine/SerenEngine/Renderer/OpenGL/: OpenGLFactory.cpp  OpenGLFactory.h  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.h  OpenGLRenderCommand.cpp  OpenGLResourceManager.cpp  OpenGLResourceManager.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.h
Engine/SerenEngine/Resource/: Buffer.h  IndexBuffer.cpp  IndexBuffer.h  ResourceManager.cpp  ResourceManager.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Engine/SerenEngine/Ultils/: DrawGeometry.cpp  DrawGeometry.h
Engine/SerenEngine/Window/: GLFWPlatformWindow.cpp  Window.h  WindowPlatform.cpp  WindowPlatform.h
Game/: CMakeLists.txt
Game/Assets/Shader/: Renderer_Circle.glsl  Renderer_Quad.glsl  Texture.glsl  line.glsl  quad.glsl
Game/Source/: Game.cpp  GameplayLayer.cpp  GameplayLayer.h  Level.cpp  Level.h  Player.cpp  Player.h
Vendors/imgui/: CMakeLists.txt
Vendors/include/glad/: gl.h
Vendors/stb_image/: CMakeLists.txt
build_ems/Game/: Game.js  Game.wasm
build_ems/Game/Assets/Shader/: Renderer_Circle.glsl  Renderer_Line.glsl
build_ems/Vendors/glfw/: cmake_uninstall.cmake
build_ems/Vendors/glfw/docs/: Doxyfile
build_ems/Vendors/glfw/docs/html/: build_8md.html  build_guide.html  compat_8md.html  compat_guide.html  compile_8md.html  compile_guide.html  context_8md.html  context_guide.html  deprecated.html  dir_5e62fd98ed8d72f8d7224195f8e546a0.html  dir_6517c689015990d86fe2ae880474a9f1.html  dir_a75aa25a98d2151601db4f7f307e905b.html  dir_c122aa726f6f7096c7d39d2d6c50e6a5.html  dir_d64d4b5dcc48fd928bb16e5d2a49bcee.html  doxygen_crawl.html  files.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  group__buttons.html  group__context.html  group__errors.html  group__gamepad__axes.html  group__gamepad__buttons.html  group__hat__state.html  group__init.html  group__input.html  group__joysticks.html  group__keys.html  group__mods.html  group__monitor.html  group__native.html  group__shapes.html  group__vulkan.html  group__window.html  index.html  input_8md.html  input_guide.html  internal_8md.html  (+23 more)
build_ems/Vendors/glfw/src/: glfw3.pc
